# qxneur

./: CMakeLists.txt  LICENSE  README.md
CMake/: common.cmake
images/: images.qrc
src/: PropertyMapper.cpp  PropertyMapper.h  QXNKeyboard.cpp  QXNKeyboard.h  QXNLanguage.cpp  QXNLanguage.h  QXNMenu.cpp  QXNMenu.h  QXNTrayIcon.cpp  QXNTrayIcon.h  QXNeur.cpp  QXNeur.h  main.cpp
src/Config/: QXNAbbreviationEditDialog.cpp  QXNAbbreviationEditDialog.h  QXNApplicationSettingsDialog.cpp  QXNApplicationSettingsDialog.h  QXNApplicationsModel.cpp  QXNApplicationsModel.h  QXNConfig.cpp  QXNConfig.h  QXNConfigDialog.cpp  QXNConfigDialog.h  QXNConfigDialog.ui
translations/: qxneur_ru.ts
